robotParser.java
// Generated from robot.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class robotParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__7=1, T__6=2, T__5=3, T__4=4, T__3=5, T__2=6, T__1=7, T__0=8, WS=9, 
		CONST=10, SIGNED=11, UNSIGNED=12, CELL=13, MATRIX=14, TOP=15, RIGHT=16, 
		DOWN=17, LEFT=18, NTOP=19, NRIGHT=20, NDOWN=21, NLEFT=22, TESTREP=23, 
		TESTONCE=24, CALL=25, START=26, FUNC=27, IDENT=28, UNUMBER=29, SNUMBER=30, 
		SEMICOLON=31, MUL=32, DIV=33, ADD=34, SUB=35, MOD=36, MORE=37, LESS=38, 
		EQUALLY=39, ELSE=40;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "')'", "'mapping'", "','", "'['", "'('", "'put'", 
		"'<-'", "WS", "'const'", "'signed'", "'unsigned'", "'cell'", "'matrix'", 
		"'top'", "'right'", "'down'", "'left'", "'ntop'", "'nright'", "'ndown'", 
		"'nleft'", "'testrep'", "'testonce'", "'call'", "'start'", "'func'", "IDENT", 
		"UNUMBER", "SNUMBER", "';'", "'*'", "'/'", "'+'", "'-'", "'%'", "'>'", 
		"'<'", "'='", "'else'"
	};
	public static final int
		RULE_prog = 0, RULE_function = 1, RULE_stmt = 2, RULE_stmts = 3, RULE_block = 4, 
		RULE_args = 5, RULE_arg = 6, RULE_declaration = 7, RULE_assignment = 8, 
		RULE_expression = 9, RULE_access = 10, RULE_condition = 11, RULE_cycle = 12, 
		RULE_print = 13, RULE_drawing = 14;
	public static final String[] ruleNames = {
		"prog", "function", "stmt", "stmts", "block", "args", "arg", "declaration", 
		"assignment", "expression", "access", "condition", "cycle", "print", "drawing"
	};

	@Override
	public String getGrammarFileName() { return "robot.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public robotParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public TerminalNode START() { return getToken(robotParser.START, 0); }
		public StmtsContext stmts(int i) {
			return getRuleContext(StmtsContext.class,i);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<StmtsContext> stmts() {
			return getRuleContexts(StmtsContext.class);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 7) | (1L << CONST) | (1L << SIGNED) | (1L << UNSIGNED) | (1L << MATRIX) | (1L << TESTREP) | (1L << TESTONCE) | (1L << CALL) | (1L << FUNC) | (1L << IDENT))) != 0)) {
				{
				setState(32);
				switch (_input.LA(1)) {
				case 3:
				case 7:
				case CONST:
				case SIGNED:
				case UNSIGNED:
				case MATRIX:
				case TESTREP:
				case TESTONCE:
				case CALL:
				case IDENT:
					{
					setState(30); stmts();
					}
					break;
				case FUNC:
					{
					setState(31); function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(37); match(START);
			setState(38); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(robotParser.FUNC, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); match(FUNC);
			setState(41); match(IDENT);
			setState(42); args();
			setState(43); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public CycleContext cycle() {
			return getRuleContext(CycleContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(robotParser.SEMICOLON, 0); }
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public DrawingContext drawing() {
			return getRuleContext(DrawingContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AccessContext access() {
			return getRuleContext(AccessContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			switch (_input.LA(1)) {
			case CONST:
			case SIGNED:
			case UNSIGNED:
			case MATRIX:
				{
				setState(45); declaration();
				}
				break;
			case IDENT:
				{
				setState(46); assignment();
				}
				break;
			case TESTREP:
				{
				setState(47); condition();
				}
				break;
			case TESTONCE:
				{
				setState(48); cycle();
				}
				break;
			case CALL:
				{
				setState(49); access();
				}
				break;
			case 7:
				{
				setState(50); print();
				}
				break;
			case 3:
				{
				setState(51); drawing();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(54); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtsContext extends ParserRuleContext {
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitStmts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmts);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(57); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(56); stmt();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(59); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); match(6);
			setState(62); stmts();
			setState(63); match(2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_args);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); match(6);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SIGNED || _la==UNSIGNED) {
				{
				{
				setState(66); arg();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72); match(2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public Token type;
		public TerminalNode SIGNED() { return getToken(robotParser.SIGNED, 0); }
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public TerminalNode UNSIGNED() { return getToken(robotParser.UNSIGNED, 0); }
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(74);
			((ArgContext)_localctx).type = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==SIGNED || _la==UNSIGNED) ) {
				((ArgContext)_localctx).type = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(75); match(IDENT);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConstAssignUnsignedContext extends DeclarationContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CONST() { return getToken(robotParser.CONST, 0); }
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public TerminalNode UNSIGNED() { return getToken(robotParser.UNSIGNED, 0); }
		public ConstAssignUnsignedContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitConstAssignUnsigned(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclMatSignedContext extends DeclarationContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode SIGNED() { return getToken(robotParser.SIGNED, 0); }
		public TerminalNode MATRIX() { return getToken(robotParser.MATRIX, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public DeclMatSignedContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitDeclMatSigned(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignUnsignedContext extends DeclarationContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public TerminalNode UNSIGNED() { return getToken(robotParser.UNSIGNED, 0); }
		public AssignUnsignedContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitAssignUnsigned(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclMatUnsignedContext extends DeclarationContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode MATRIX() { return getToken(robotParser.MATRIX, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public TerminalNode UNSIGNED() { return getToken(robotParser.UNSIGNED, 0); }
		public DeclMatUnsignedContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitDeclMatUnsigned(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConstAssignSignedContext extends DeclarationContext {
		public TerminalNode SIGNED() { return getToken(robotParser.SIGNED, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CONST() { return getToken(robotParser.CONST, 0); }
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public ConstAssignSignedContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitConstAssignSigned(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignSignedContext extends DeclarationContext {
		public TerminalNode SIGNED() { return getToken(robotParser.SIGNED, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public AssignSignedContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitAssignSigned(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignUnsignedIdContext extends DeclarationContext {
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public TerminalNode UNSIGNED() { return getToken(robotParser.UNSIGNED, 0); }
		public AssignUnsignedIdContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitAssignUnsignedId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignSignedIdContext extends DeclarationContext {
		public TerminalNode SIGNED() { return getToken(robotParser.SIGNED, 0); }
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public AssignSignedIdContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitAssignSignedId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WorldContext extends DeclarationContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode CELL() { return getToken(robotParser.CELL, 0); }
		public TerminalNode MATRIX() { return getToken(robotParser.MATRIX, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public WorldContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitWorld(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaration);
		try {
			setState(126);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new ConstAssignUnsignedContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77); match(CONST);
				setState(78); match(UNSIGNED);
				setState(79); match(IDENT);
				setState(80); match(8);
				setState(81); expression(0);
				}
				break;

			case 2:
				_localctx = new ConstAssignSignedContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(82); match(CONST);
				setState(83); match(SIGNED);
				setState(84); match(IDENT);
				setState(85); match(8);
				setState(86); expression(0);
				}
				break;

			case 3:
				_localctx = new AssignUnsignedIdContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(87); match(UNSIGNED);
				setState(88); match(IDENT);
				}
				break;

			case 4:
				_localctx = new AssignUnsignedContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(89); match(UNSIGNED);
				setState(90); match(IDENT);
				setState(91); match(8);
				setState(92); expression(0);
				}
				break;

			case 5:
				_localctx = new AssignSignedIdContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(93); match(SIGNED);
				setState(94); match(IDENT);
				}
				break;

			case 6:
				_localctx = new AssignSignedContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(95); match(SIGNED);
				setState(96); match(IDENT);
				setState(97); match(8);
				setState(98); expression(0);
				}
				break;

			case 7:
				_localctx = new DeclMatUnsignedContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(99); match(MATRIX);
				setState(100); match(UNSIGNED);
				setState(101); match(IDENT);
				setState(102); match(6);
				setState(103); expression(0);
				setState(104); match(4);
				setState(105); expression(0);
				setState(106); match(2);
				}
				break;

			case 8:
				_localctx = new DeclMatSignedContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(108); match(MATRIX);
				setState(109); match(SIGNED);
				setState(110); match(IDENT);
				setState(111); match(6);
				setState(112); expression(0);
				setState(113); match(4);
				setState(114); expression(0);
				setState(115); match(2);
				}
				break;

			case 9:
				_localctx = new WorldContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(117); match(MATRIX);
				setState(118); match(CELL);
				setState(119); match(IDENT);
				setState(120); match(6);
				setState(121); expression(0);
				setState(122); match(4);
				setState(123); expression(0);
				setState(124); match(2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	 
		public AssignmentContext() { }
		public void copyFrom(AssignmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignIdContext extends AssignmentContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public AssignIdContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitAssignId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignMatrixContext extends AssignmentContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public AssignMatrixContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitAssignMatrix(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignWorldContext extends AssignmentContext {
		public Token u;
		public Token r;
		public Token d;
		public Token l;
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode DOWN() { return getToken(robotParser.DOWN, 0); }
		public TerminalNode NTOP() { return getToken(robotParser.NTOP, 0); }
		public TerminalNode NRIGHT() { return getToken(robotParser.NRIGHT, 0); }
		public TerminalNode NDOWN() { return getToken(robotParser.NDOWN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode TOP() { return getToken(robotParser.TOP, 0); }
		public TerminalNode LEFT() { return getToken(robotParser.LEFT, 0); }
		public TerminalNode NLEFT() { return getToken(robotParser.NLEFT, 0); }
		public TerminalNode RIGHT() { return getToken(robotParser.RIGHT, 0); }
		public TerminalNode IDENT() { return getToken(robotParser.IDENT, 0); }
		public AssignWorldContext(AssignmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof robotVisitor ) return ((robotVisitor<? extends T>)visitor).visitAssignWorld(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignment);
		int _la;
		try {
			setState(157);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new AssignIdContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(128); match(IDENT);
				setState(129); match(8);
				setState(130); expression(0);
				}
				break;

			case 2:
				_localctx = new AssignMatrixContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(131); match(IDENT);
				setState(132); match(6);
				setState(133); expression(0);
				setState(134); match(4);
				setState(135); expression(0);
				setState(136); match(2);
				setState(137); match(8);
				setState(138); expression(0);
				}
				break;

			case 3:
				_localctx = new AssignWorldContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(140); match(IDENT);
				setState(141); match(6);
				setState(142); expression(0);
				setState(143); match(4);
				setState(144); expression(0);
				setState(145); match(2);
				setState(146); match(8);
				setState(147); match(6);
				setState(148);
				((AssignWorldContext)_localctx).u = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==TOP || _la==NTOP) ) {
					((AssignWorldContext)_localctx).u = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(149); match(4);
				setState(150);
				((AssignWorldContext)_localctx).r = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==RIGHT || _la==NRIGHT) ) {
					((AssignWorldContext)_localctx).r = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(151); match(4);
				setState(152);
				((AssignWorldContext)_localctx).d = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==DOWN || _la==NDOWN) ) {
					((AssignWorldContext)_localctx).d = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(153); match(4);
				setState(154);
				((AssignWorldContext)_localctx).l = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==LEFT || _la==NLEFT) ) {
					((AssignWorldContext)_localctx).l = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(155); match(2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
